# pyproject.toml
[project]
name = "comfyui-enumcombo" # Unique identifier for your node. Immutable after creation.
description = "Workflow-local enumerated values for ComfyUI."
version = "0.0.1" # Custom node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/SparknightLLC/ComfyUI-EnumCombo"

[tool.comfy]
PublisherId = "sparknight" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-EnumCombo" # Display name for the Custom Node. Can be changed later.
